<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.catnip.egroceries.presentation.feature.home2.Home2Fragment"
        android:label="@string/title_tab_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.catnip.egroceries.presentation.feature.cart.CartFragment"
        android:label="@string/title_tab_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.catnip.egroceries.presentation.feature.profile.ProfileFragment"
        android:label="@string/title_tab_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>